--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- colors for buttons -->
+    <color name="gradient_start_color">#4c84ff</color>
+    <color name="gradient_end_color">#10a3fe</color>
+
+    <!-- colors for tabs and screen text -->
+    <color name="tab_indicator_gary">#c0c0c0</color>
+    <color name="intro_title_color">#00000</color>
+    <color name="intro_description_color">#656565</color>
+
+
+
 </resources>
