--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,6 +8,7 @@
     tools:context=".IntroActivity">
 
     <androidx.viewpager.widget.ViewPager
+        android:id="@+id/screen_viewpager"
         android:layout_width="0dp"
         android:layout_height="0dp"
        android:layout_marginStart="8dp"
@@ -32,7 +33,8 @@
         android:layout_marginBottom="8dp"
         android:text="Suivant"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tablayout"/>
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout"
         android:layout_width="wrap_content"
