--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -57,7 +57,7 @@
     <Button
         android:id="@+id/btn_get_started"
         android:visibility="invisible"
-        android:layout_width="132dp"
+        android:layout_width="232dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -65,7 +65,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="64dp"
         android:background="@drawable/btn_gradient_style"
-        android:text="Get Started"
+        android:text="Commencez"
         android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
