opening main activity + editing its button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageId"/>
+
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="doProcess"/>
+        android:layout_height="65dp"
+        android:textColor="@color/white"
+        android:text="prenez une photo"
+        android:onClick="doProcess" />
 
     <TextView
         android:layout_width="wrap_content"
